--- a/TPS_ClinicaPyM/src/paneles/pnlBackup.form
+++ b/TPS_ClinicaPyM/src/paneles/pnlBackup.form
@@ -22,6 +22,8 @@
         <Property name="fileSelectionMode" type="int" value="1"/>
       </Properties>
     </Component>
+    <Component class="javax.swing.JFileChooser" name="fcChooserFile">
+    </Component>
   </NonVisualComponents>
   <Properties>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
