--- a/TPS_ClinicaPyM/src/paneles/pnlMedicina.form
+++ b/TPS_ClinicaPyM/src/paneles/pnlMedicina.form
@@ -473,6 +473,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Arial" size="12" style="1"/>
                     </Property>
+                    <Property name="placeholder" type="java.lang.String" value="Nombre de medicina..."/>
                   </Properties>
                 </Component>
                 <Component class="rojeru_san.RSMTextFull" name="txtPrecioCompra">
@@ -483,6 +484,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Arial" size="12" style="1"/>
                     </Property>
+                    <Property name="placeholder" type="java.lang.String" value="Precio de compra de medicina..."/>
                   </Properties>
                 </Component>
                 <Component class="rojeru_san.RSMTextFull" name="txtPrecioVenta">
@@ -493,6 +495,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Arial" size="12" style="1"/>
                     </Property>
+                    <Property name="placeholder" type="java.lang.String" value="Precio de venta de medicina..."/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JSpinner" name="spnCantidad">
@@ -620,6 +623,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Arial" size="12" style="0"/>
                     </Property>
+                    <Property name="placeholder" type="java.lang.String" value="Filtrar por nombre..."/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtFiltroNombreActionPerformed"/>
