--- a/TPS_ClinicaPyM/src/paneles/pnlMedicina.form
+++ b/TPS_ClinicaPyM/src/paneles/pnlMedicina.form
@@ -298,11 +298,11 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jPanel6" max="32767" attributes="0"/>
-                          <Component id="jPanel5" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jPanel6" min="-2" max="-2" attributes="0"/>
+                          <Component id="jPanel5" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="201" max="32767" attributes="0"/>
+                      <EmptySpace pref="139" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -342,12 +342,13 @@
                                           <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                                               <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                                               <Component id="lblPrecioVenta" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jLabel7" alignment="1" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <Component id="jLabel6" alignment="1" min="-2" pref="107" max="-2" attributes="0"/>
                                       <Component id="lblPrecioCompra" alignment="1" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="txtNombre" min="-2" pref="341" max="-2" attributes="0"/>
                                       <Component id="txtPrecioVenta" min="-2" pref="341" max="-2" attributes="0"/>
@@ -355,6 +356,7 @@
                                       <Component id="txtIdMedicina" alignment="0" min="-2" pref="198" max="-2" attributes="0"/>
                                       <Component id="cmbPresentacion" alignment="0" min="-2" pref="340" max="-2" attributes="0"/>
                                       <Component id="txtPrecioCompra" min="-2" pref="341" max="-2" attributes="0"/>
+                                      <Component id="spnMinimo" alignment="0" min="-2" pref="341" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -395,7 +397,12 @@
                               <Component id="spnCantidad" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
                               <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="17" max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="spnMinimo" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
+                              <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace pref="31" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="btnGuardar2" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="btnGuardar1" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -568,6 +575,22 @@
                     </Property>
                   </Properties>
                 </Component>
+                <Component class="javax.swing.JSpinner" name="spnMinimo">
+                  <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Arial" size="12" style="0"/>
+                    </Property>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JLabel" name="jLabel7">
+                  <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Tahoma" size="14" style="1"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="M&#xed;nimo:"/>
+                    <Property name="name" type="java.lang.String" value="" noResource="true"/>
+                  </Properties>
+                </Component>
               </SubComponents>
             </Container>
             <Container class="javax.swing.JPanel" name="jPanel6">
@@ -612,7 +635,7 @@
                           </Group>
                           <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                           <Component id="jScrollPane4" min="-2" pref="270" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="32" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
