--- a/TPS_ClinicaPyM/src/principal/Principal.form
+++ b/TPS_ClinicaPyM/src/principal/Principal.form
@@ -69,19 +69,25 @@
                       <EmptySpace min="0" pref="2" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="siete" alignment="0" pref="290" max="32767" attributes="0"/>
-                          <Component id="seis" alignment="0" max="32767" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="siete" alignment="0" pref="290" max="32767" attributes="0"/>
+                                  <Component id="seis" alignment="0" max="32767" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="dos" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="tres" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="cuatro" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="cinco" alignment="0" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="dos" alignment="0" max="32767" attributes="0"/>
-                          <Component id="tres" alignment="0" max="32767" attributes="0"/>
-                          <Component id="cuatro" alignment="0" max="32767" attributes="0"/>
-                          <Component id="cinco" alignment="0" max="32767" attributes="0"/>
+                          <Component id="ocho" alignment="0" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -96,8 +102,10 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="cuatro" min="-2" pref="50" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
+                      <Component id="ocho" min="-2" pref="50" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                       <Component id="cinco" min="-2" pref="50" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="seis" min="-2" pref="50" max="-2" attributes="0"/>
@@ -337,6 +345,30 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="CONFIGURACIONES"/>
               </Properties>
+            </Component>
+            <Component class="rsbuttom.RSButtonMetro" name="ocho">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/img/recetas.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Expediente"/>
+                <Property name="colorHover" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="b5" green="8f" red="31" type="rgb"/>
+                </Property>
+                <Property name="colorNormal" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="88" green="6d" red="33" type="rgb"/>
+                </Property>
+                <Property name="colorPressed" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="21" green="9" red="1d" type="rgb"/>
+                </Property>
+                <Property name="horizontalAlignment" type="int" value="2"/>
+                <Property name="horizontalTextPosition" type="int" value="4"/>
+                <Property name="iconTextGap" type="int" value="19"/>
+              </Properties>
+              <Events>
+                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ochoMousePressed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ochoActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
